Add posts related to goals
